--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "rules",
+    "name": "json-logic-compiler",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "Compile JsonLogic expressions to JavaScript.",
+    "main": "build/index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "jest",
+      "build": "tsc"
     },
-    "license": "UNLICENSED",
+    "license": "MIT",
     "devDependencies": {
+        "@types/jest": "^27.0.1",
         "@types/node": "^14.14.35",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
         "eslint": "^7.22.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "jest": "^27.0.6",
+        "ts-jest": "^27.0.5",
         "typescript": "^4.3.4"
-    },
-    "dependencies": {
     }
-  }
-  
+}
